--- a/test/fixtures/board_tag_relations.yml
+++ b/test/fixtures/board_tag_relations.yml
@@ -18,7 +18,11 @@
 #  fk_rails_...  (board_id => boards.id)
 #  fk_rails_...  (tag_id => tags.id)
 #
-class BoardTagRelation < ApplicationRecord
-  belongs_to :board
-  belongs_to :tag
-end
+
+one:
+  board: one
+  tag: one
+
+two:
+  board: two
+  tag: two
