--- a/test/fixtures/tags.yml
+++ b/test/fixtures/tags.yml
@@ -7,7 +7,9 @@
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #
-class Tag < ApplicationRecord
-  has_many :board_tag_relations, dependent: :delete_all
-  has_many :boards, through: :board_tag_relations
-end
+
+one:
+  name: MyString
+
+two:
+  name: MyString
